# tpm-luks

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-bin-dyn  Dockerfile-build  Dockerfile-ci  Dockerfile-dev  Dockerfile-scratch-bin  Dockerfile-static-build  Makefile  README.md  build.rs  cross-compile.sh  make-luks-image.sh  mkdevsrv.sh  setupdevsrv.sh  sync.sh  test.sh
.github/workflows/: diag.yml  general.yml
src/: cli.rs  lib.rs  luks.rs  main.rs  tpm.rs
src/tpm/: mod.rs  pcr.rs
tests/: Dockerfile  Dockerfile-swtpm  swtpm-entrypoint.sh  test.bats
