[package]
name = "tpm-luks"
description = "Automate LUKS keys stored in TPM"
version = "0.1.0"
edition = "2021"
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
ambassador = "0.3.4"
cryptsetup-rs = "0.3.2"
either = "1.8.0"
once_cell = "1.13.0"
thiserror = "1.0.32"
tracing = "0.1.34"
tss-esapi = "7.1.0"

[dev-dependencies]
eyre = "0.6.8"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

