[package]
name = "tpm-luks"
description = "Automate LUKS keys stored in TPM"
version = "0.1.0"
edition = "2021"
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
ambassador = "0.3.4"
clap = { version = "4.0.4", features = ["derive", "env"] }
cryptsetup-rs = "0.3.2"
either = "1.8.0"
env_logger = "0.9.1"
eyre = "0.6.8"
hex = "0.4.3"
log = "0.4.17"
once_cell = "1.13.0"
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.32"
tracing = "0.1.34"
tss-esapi = { git = "https://github.com/olidacombe/rust-tss-esapi", branch = "digest-serialization" }

[dev-dependencies]
eyre = "0.6.8"
tempfile = "3.3.0"
uuid = "1.1.2"
env_logger = "0.9.1"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
